feat(crash): add complete diagnosis and retryable repairs